resume/style.css
@page Section1 {
	size: 8in 11in;
	margin: 1in 1in 1in 1in;
	mso-header-margin: 0.5in;
	mso-footer-margin: 0.5in;
	mso-paper-source: 0;
}

* {
	-webkit-print-color-adjust: exact;
	print-color-adjust: exact;

}

body {
	/*font:10.5pt "Times New roman", Times, Serif;*/
	font: 9pt 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
	line-height: 1.4em;
}

.eattime,
.jobtitle,
legend,
.awardname,
.address,
.gpa,
.degreename,
.schoolname,
.name,
a,
h1 {
	font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
}

.schoolname,
.degreename {
	font-size: 1.1em;
}

.namesep {
	vertical-align: middle;
	font-size: 10pt;
	line-height: 28pt;
}

.school,
.degree {
	line-height: .2in;
}

.degree i {
	/*font-variant:small-caps;*/

}

.name a {
	color: #555;
}

#skills {
	margin: 0 0 -6pt .5in;

}

#resume {
	page: Section1;
	height: 100%;

	overflow: hidden;
	/*border:1px solid #bbb;*/

}

fieldset {
	display: inline-block;
	border: 1px solid #bbb;
	padding: 3pt;
	margin: 2pt 2pt 2pt 2pt;
	border-radius: 9pt;
}

fieldset>legend {
	background: white;
	margin: auto;
	text-align: center;
}

.description>li i,
.description>li b,
fieldset legend,
.description>li a {
	font-size: 1.1em;
}

ul#skills li {
	text-align: center;
	list-style: none;
	border-left: 2px solid #ccc;
	margin-bottom: 2px;
	margin-left: -.5in;
}

.bull {
	font-size: 0.6em;
	line-height: 1.667em;
	vertical-align: middle;
}

.pull-right {
	float: right;
}

.name {
	text-align: left;
	padding-left: 20pt;
	font-size: 28pt;
	line-height: 28pt;
}

.address {
	margin-right: 0.25in;

	float: right;
	text-align: right;
	vertical-align: bottom;
	font-size: 10pt;
	margin-top: 13pt;
}

hr {
	display: block;
	height: 3px;
	border: 0;
	color: #B5D8FF;
	/*border-bottom:3px double #B8DAFF;*/
}

.contact {
	text-align: right;
	font-size: .9em;
	margin-top: -9pt;
	margin-bottom: -20pt;
	margin-right: 0.25in;
}

a {
	color: #007AFF;
	text-decoration: none;
}

.eatyear {
	padding: 4px;
	text-align: center;
	border-radius: 5px;
	/*	box-shadow:0 0 2px #555;*/
	border: 1px solid #aaa;
	display: inline-block;
	margin-left: 10px;
	background: white;
}

.eattime {
	border-bottom: 1px solid #555;
}

a:hover {
	color: #4DA2FF;
	/*border-bottom:1px dotted #007AFF;*/
}

.content {
	margin: 0 .25in;
}

.eatyears {
	margin-top: 10pt;
	float: right;
	/*margin-left:.5in;*/
}

h1 {
	display: block;
	font-weight: normal;
	font-size: 1.2em;
	border-bottom: 1px solid #aaa;
	padding: 0 .05in;
	font-size: 13pt;
	margin-top: 20px;
	clear: both;
}

p,
div.award {
	margin: 0 0 0 .2in;
}

p,
span {
	/*font-family: helvetica, arial, sans-serif;*/
}

.employer,
.left {
	font-size: 12pt;
	/* float:left;*/
	/*adds jobtitle inline*/

}

.year {
	font-variant: normal;
	font-size: 9pt;
	float: right;
}

.jobtitle {
	font-size: 11pt;
	margin-top: 0;
	padding-top: 0;
	margin-left: .3in;
	margin-right: 5px;
}

.jobtitle.continuation {
	margin-top: 8pt;
	border-bottom: 1px dotted #aaa;
}

.job,
.award {
	clear: both;

	border-bottom: 1px dotted #aaa;
	margin-top: 4px;
	margin-bottom: 3px;
}

.job {
	margin-top: 12px;
}

.description {
	margin: 5px 0 0 .5in;
	padding: 0;

}

.gpa {
	border-radius: 5px;
	border: 1px solid #aaa;
	/*	box-shadow:0 0 1px #555;*/
	background-color: #fff;

	display: inline-block;
	padding: 2pt;
	float: left;
	text-align: center;
	line-height: .1in;
	margin: 0 .2in .1in .2in;
	color: #555;
	text-shadow: 1pt 1pt 1pt white;

}

.gpa>.num {
	line-height: .2in;
	display: block;
	font-size: .2in;
	padding: 0;
	margin: 0;
}

em {
	font-style: normal;
}

.page {
	margin: 0;
}

@media only screen and (min-width: 8.2in) {
	body {
		background-color: #ccc;

	}

	.page {
		background-color: white;
		width: 7in;
		min-height: 9.5in;
		/* IDK why the size is 9.5in instead of 10 */
		padding: 0.5in;
		margin: 30px auto;
		box-shadow: 0 0 100px #AAA, 0 0 10px #ffd;
	}
}

@media only screen and (max-width: 6in) {
	.name {
		font-size: 20pt;
	}
}

.programming,
.programming fieldset {
	border-color: #dca !important;
}

.programming {
	margin-top: -5px;
}

.skillset {
	margin-left: -.23in !important;
}

.OS,
.OS fieldset {
	border-color: #007AFF !important;
}

.software,
.software fieldset {
	border-color: #007AFF !important;
}

.hardware,
.hardware fieldset {
	border-color: #4DBCF9 !important;
}

#warning {
	display: block;
	top: 0;
	left: 0;
	width: 100%;
	/*margin:-10px 0 0 -10px;*/
	line-height: 40px;
	font-size: 16px;
	background: white;
	z-index: 10;
	position: fixed;
	text-align: center;
	border-bottom: 1px solid #aaa;
}


@media not print {
	body {
		padding-top: 40px;
	}
}

@media only screen and (max-width: 480px) {
	body {
		/*font-size:9pt;*/
	}
}

@media screen and (max-height:320px) and (orientation:landscape) {
	#warning {
		display: none;
	}

	body {
		padding-top: 0;
	}
}

@media print {
	#warning {
		display: none !important;
	}

	#resume {
		-webkit-box-sizing: border-box;
		/* Safari/Chrome, other WebKit */
		-moz-box-sizing: border-box;
		/* Firefox, other Gecko */
		box-sizing: border-box;
		/* Opera/IE 8+ */
		height: 9.45in;
		margin-bottom: -5pt;
	}

}

